amrsregistration: refactoring class names to contain AmrsRegistration and moved test files into correct package.

--- a/build.xml
+++ b/build.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <!-- ********************************************************* -->
-<!-- ** Remote Registration Module                          ** -->
+<!-- ** AMRS Registration Module                            ** -->
 <!-- **	                                                    ** -->
-<!-- ** @author Saptarshi Purkayastha                       ** -->
+<!-- ** @author Win Ribeka, Brian McKown                    ** -->
 <!-- ** @version 0.8                                        ** -->
 <!-- ********************************************************* -->
 <project name="amrsregistration" default="package-module">
