--- a/.classpath
+++ b/.classpath
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="metadata"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="src" path="web/module"/>
 	<classpathentry kind="src" path="web/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/avalon-framework-4.2.0.jar"/>
 	<classpathentry kind="lib" path="lib/barcode4j.jar"/>
-	<classpathentry kind="lib" path="lib-common/openmrs-api-1.5.0.6232-dev.jar"/>
+	<classpathentry kind="lib" path="lib-common/openmrs-api-1.5.0.6232-dev.jar" sourcepath="/openmrs-1.4.x/src/api"/>
 	<classpathentry kind="lib" path="lib-common/web-openmrs-api-1.5.0.6232-dev.jar"/>
 	<classpathentry kind="lib" path="lib-common/tests-openmrs-api-1.5.0.6232-dev.jar"/>
 	<classpathentry kind="lib" path="lib-common/commons-fileupload-1.2.1.jar"/>
