--- a/.classpath
+++ b/.classpath
@@ -33,5 +33,5 @@
 	<classpathentry kind="lib" path="lib-common/junit-4.4.jar"/>
 	<classpathentry kind="lib" path="lib-common/mysql-connector-java-3.1.10-bin.jar"/>
 	<classpathentry kind="lib" path="lib-common/velocity-1.6-beta1.jar"/>
-	<classpathentry kind="output" path="build"/>
+	<classpathentry kind="output" path="idea/out/production/amrsregistration"/>
 </classpath>
