--- a/.classpath
+++ b/.classpath
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="lib" path="metadata"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="web/src"/>
+	<classpathentry kind="src" path="test"/>
+	<classpathentry kind="lib" path="dist"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib-common/openmrs-api-1.4.4.00.9299.jar" sourcepath="/openmrs-trunk-ori/src/api"/>
-	<classpathentry kind="lib" path="lib-common/web-openmrs-api-1.4.4.00.9299.jar"/>
-	<classpathentry kind="lib" path="lib-common/tests-openmrs-api-1.4.4.00.9299.jar"/>
-	<classpathentry kind="lib" path="lib-common/commons-fileupload-1.2.1.jar"/>
 	<classpathentry kind="lib" path="lib-common/commons-io-1.4.jar"/>
 	<classpathentry kind="lib" path="lib-common/commons-logging-1.0.4.jar"/>
-	<classpathentry kind="lib" path="lib-common/spring-2.5.1.jar" sourcepath="/openmrs-source/spring-2.5.1-src.zip"/>
 	<classpathentry kind="lib" path="lib-common/spring-test.jar"/>
-	<classpathentry kind="lib" path="lib-common/spring-webmvc.jar" sourcepath="/openmrs-source/spring-webmvc-sources.zip"/>
+	<classpathentry kind="lib" path="lib-common/spring-webmvc.jar"/>
+	<classpathentry kind="lib" path="lib-common/spring-2.5.6.jar"/>
 	<classpathentry kind="lib" path="lib-common/spring-mock.jar"/>
 	<classpathentry kind="lib" path="lib-common/servlet-api.jar"/>
 	<classpathentry kind="lib" path="lib-common/hibernate3.jar"/>
-	<classpathentry kind="lib" path="lib-common/jaxen-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib-common/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="lib-common/dbunit-2.2.jar"/>
 	<classpathentry kind="lib" path="lib-common/mail.jar"/>
 	<classpathentry kind="lib" path="lib-common/jta.jar"/>
 	<classpathentry kind="lib" path="lib-common/commons-collections-3.1.jar"/>
-	<classpathentry kind="lib" path="lib-common/commons-lang-2.4.jar" sourcepath="/openmrs-source/commons-lang-2.1-src.zip"/>
+	<classpathentry kind="lib" path="lib-common/commons-lang-2.4.jar"/>
 	<classpathentry kind="lib" path="lib-common/simple-xml-1.6.1-mod.jar"/>
 	<classpathentry kind="lib" path="lib-common/c3p0-0.9.1.jar"/>
 	<classpathentry kind="lib" path="lib-common/cglib-2.1_3.jar"/>
@@ -31,7 +28,18 @@
 	<classpathentry kind="lib" path="lib-common/antlr_2.7.6.jar"/>
 	<classpathentry kind="lib" path="lib-common/ehcache-1.2.4.jar"/>
 	<classpathentry kind="lib" path="lib-common/junit-4.4.jar"/>
-	<classpathentry kind="lib" path="lib-common/mysql-connector-java-3.1.10-bin.jar"/>
 	<classpathentry kind="lib" path="lib-common/velocity-1.6-beta1.jar"/>
-	<classpathentry kind="output" path="idea/out/production/amrsregistration"/>
+	<classpathentry kind="lib" path="lib-common/openmrs-api-1.6.2.15027-dev.jar"/>
+	<classpathentry kind="lib" path="lib-common/tests-openmrs-api-1.6.2.15027-dev.jar"/>
+	<classpathentry kind="lib" path="lib-common/web-openmrs-api-1.6.2.15027-dev.jar"/>
+	<classpathentry kind="lib" path="lib-common/dbunit-2.4.4.jar"/>
+	<classpathentry kind="lib" path="lib-common/dwr-205.jar"/>
+	<classpathentry kind="lib" path="lib-common/liquibase-1.9.4-mod.jar"/>
+	<classpathentry kind="lib" path="lib-common/mysql-connector-java-5.0.4-bin.jar"/>
+	<classpathentry kind="lib" path="lib-common/taglibs-standard-1.1.jar"/>
+	<classpathentry kind="lib" path="lib-common/xercesImpl.jar"/>
+	<classpathentry kind="lib" path="lib-common/xstream-1.3.jar"/>
+	<classpathentry kind="lib" path="lib-common/jsp-api.jar"/>
+	<classpathentry kind="lib" path="lib-common/jstl-1.1.jar"/>
+	<classpathentry kind="output" path="build"/>
 </classpath>
