--- a/.classpath
+++ b/.classpath
@@ -2,14 +2,15 @@
 <classpath>
 	<classpathentry kind="lib" path="metadata"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="web/src"/>
+	<classpathentry kind="src" path="web/test"/>
 	<classpathentry kind="src" path="test"/>
+	<classpathentry kind="src" path="web/src"/>
 	<classpathentry kind="lib" path="dist"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib-common/commons-io-1.4.jar"/>
 	<classpathentry kind="lib" path="lib-common/commons-logging-1.0.4.jar"/>
 	<classpathentry kind="lib" path="lib-common/spring-test.jar"/>
-	<classpathentry kind="lib" path="lib-common/spring-webmvc.jar"/>
+	<classpathentry kind="lib" path="lib-common/spring-webmvc.jar" sourcepath="/home/jkeiper/.m2/repository/org/springframework/spring-webmvc/2.5.1/spring-webmvc-2.5.1-sources.jar"/>
 	<classpathentry kind="lib" path="lib-common/spring-2.5.6.jar"/>
 	<classpathentry kind="lib" path="lib-common/spring-mock.jar"/>
 	<classpathentry kind="lib" path="lib-common/servlet-api.jar"/>
@@ -41,5 +42,8 @@
 	<classpathentry kind="lib" path="lib-common/xstream-1.3.jar"/>
 	<classpathentry kind="lib" path="lib-common/jsp-api.jar"/>
 	<classpathentry kind="lib" path="lib-common/jstl-1.1.jar"/>
+	<classpathentry kind="lib" path="lib-common/hsqldb.jar"/>
+	<classpathentry kind="lib" path="lib-common/slf4j-api-1.5.6.jar"/>
+	<classpathentry kind="lib" path="lib-common/slf4j-log4j12-1.5.6.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
