--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -37,6 +37,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>${project.parent.artifactId}-${version}</finalName>
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
