--- a/api/pom.xml
+++ b/api/pom.xml
@@ -6,21 +6,13 @@
 		<artifactId>amrsregistration</artifactId>
 		<version>1.1</version>
 	</parent>
-	<groupId>org.openmrs.module</groupId>
+
 	<artifactId>amrsregistration-api</artifactId>
 	<packaging>jar</packaging>
 	<name>AMRS Registration Module API</name>
 	<description>API project for AMRS Registration Module</description>
 
 	<dependencies>
-		<!-- 
-		Add other dependencies from lib:
-		<dependency>
-			<groupId>org.other.library</groupId>
-			<artifactId>library-name</artifactId>
-		</dependency>
-		-->
-		
 		<dependency>
 			<groupId>org.openmrs.api</groupId>
 			<artifactId>openmrs-api</artifactId>
@@ -37,5 +29,21 @@
 			<type>jar</type>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+
+		<testResources>
+			<testResource>
+				<directory>src/test/resources</directory>
+				<filtering>true</filtering>
+			</testResource>
+		</testResources>
+	</build>
 
 </project>
