--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -13,27 +13,54 @@
 	<description>OMOD project for AMRS Registration Module</description>
 
 	<dependencies>
+
+		<!-- Begin OpenMRS modules -->
+
 		<dependency>
-			<groupId>org.openmrs.module</groupId>
-			<artifactId>amrsregistration-api</artifactId>
+			<groupId>${project.parent.groupId}</groupId>
+			<artifactId>${project.parent.artifactId}-api</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
 		
+		<!-- End OpenMRS modules -->
+
+		<!-- Begin OpenMRS core -->
+
 		<dependency>
 			<groupId>org.openmrs.api</groupId>
 			<artifactId>openmrs-api</artifactId>
 			<type>jar</type>
 		</dependency>
+
 		<dependency>
 			<groupId>org.openmrs.web</groupId>
 			<artifactId>openmrs-web</artifactId>
 			<type>jar</type>
 		</dependency>
+
+		<dependency>
+			<groupId>org.openmrs.api</groupId>
+			<artifactId>openmrs-api</artifactId>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openmrs.web</groupId>
+			<artifactId>openmrs-web</artifactId>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.openmrs.test</groupId>
 			<artifactId>openmrs-test</artifactId>
-			<type>jar</type>
+			<type>pom</type>
+			<scope>test</scope>
 		</dependency>
+
+		<!-- End OpenMRS core -->
+
 	</dependencies>
 
 	<build>
