--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,24 @@
 	<name>AMRS Registration Module</name>
 	<description>Parent project for AMRS Registration Module</description>
 
-	<url>http://openmrs.org</url>
+	<url>http://wiki.ampath.or.ke/</url>
+	
+	<developers>
+		<developer>
+			<name>Jeremy Keiper</name>
+		</developer>
+		<developer>
+			<name>Win Ribeka</name>
+		</developer>
+		<developer>
+			<name>Brian McKown</name>
+		</developer>
+	</developers>
+	
+	<organization>
+		<name>AMPATH</name>
+		<url>http://www.ampath.or.ke</url>
+	</organization>
 
 	<scm>
 		<connection>scm:git:https://github.com/AMPATH/openmrs-module-amrsregistration/</connection>
@@ -23,7 +40,13 @@
 	</modules>
 
 	<properties>
-		<openMRSVersion>1.6.2</openMRSVersion>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <MODULE_ID>${project.parent.artifactId}</MODULE_ID>
+        <MODULE_NAME>${project.parent.name}</MODULE_NAME>
+        <MODULE_VERSION>${project.parent.version}</MODULE_VERSION>
+        <MODULE_PACKAGE>${project.parent.groupId}.${project.parent.artifactId}</MODULE_PACKAGE>
+		<openMRSVersion>1.8.0</openMRSVersion>
+        <customArgLineForTesting></customArgLineForTesting>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -50,10 +73,24 @@
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
+				<groupId>org.openmrs.api</groupId>
+				<artifactId>openmrs-api</artifactId>
+				<version>${openMRSVersion}</version>
+				<type>test-jar</type>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.openmrs.web</groupId>
+				<artifactId>openmrs-web</artifactId>
+				<version>${openMRSVersion}</version>
+				<type>test-jar</type>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
 				<groupId>org.openmrs.test</groupId>
 				<artifactId>openmrs-test</artifactId>
 				<version>${openMRSVersion}</version>
-				<type>jar</type>
+				<type>pom</type>
 				<scope>test</scope>
 			</dependency>
 
@@ -73,10 +110,36 @@
 						<source>1.6</source>
 					</configuration>
 				</plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>2.3.2</version>
+                    <configuration>
+                        <autoVersionSubmodules>true</autoVersionSubmodules>
+                        <tagNameFormat>@{project.version}</tagNameFormat>
+                    </configuration>
+                </plugin>
 				<plugin>
 					<groupId>org.openmrs.maven.plugins</groupId>
 					<artifactId>maven-openmrs-plugin</artifactId>
 					<version>1.0.1</version>
+                    <extensions>true</extensions>
+                    <executions>
+                        <execution>
+                            <id>init</id>
+                            <phase>initialize</phase>
+                            <goals>
+                                <goal>initialize-module</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>pack</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>package-module</goal>
+                            </goals>
+                        </execution>
+                    </executions>
 				</plugin>
 
 				<plugin>
@@ -84,6 +147,14 @@
 					<artifactId>maven-dependency-plugin</artifactId>
 					<version>2.4</version>
 				</plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.5</version>
+                    <configuration>
+                        <argLine>-Duser.language=en -Duser.region=US -Xmx512m -XX:MaxPermSize=512m ${customArgLineForTesting}</argLine>
+                    </configuration>
+                </plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
